# Helm

./: .gitignore  README.md  package.json
.claude/: settings.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_phase1.sql  0002_phase2_runs_approvals.sql  0003_phase3a_worktrees.sql  0004_evidence_gate_timeline.sql  0005_run_events.sql  0006_run_lifecycle.sql  0007_repair_run_links.sql  0008_planning_workspace.sql  0009_planning_approvals_artifacts.sql  0010_terminal_orca_parity.sql  0011_agent_run_runner_metadata.sql
apps/desktop/src-tauri/schemas/: structured-result.schema.json
apps/desktop/src-tauri/src/: db.rs  git.rs  main.rs  models.rs
docs/: agent-orchestrator-reference-goal.md  agent-runner-lifecycle-plan.md  ai-connection-role-selection-plan.md  ai-plan-conversation-approval-feature.md  ai-planning-workspace-plan.md  codex-hermes-helm-observer-plan.md  core-loop-completion-plan.md  domain-goal-implementation-plan.md  executable-planning-contract.md  helm-task-test-status.md  hermes-local-api-guide.md  next-steps.md  orca-style-terminal-implementation-plan.md  orchestrator-design.md  phase-0-1-implementation-plan.md  phase-1-2-user-flow.md  phase-2-implementation-plan.md  phase-3a-implementation-plan.md  reference-adoption-application-plan.md  reference-driven-work-plan.md  reference-product-quality-upgrade-plan.md  ui-style-guide.md  ux-operation-blocker-remediation-plan.md
scripts/: hermes-run-gemini.mjs
(+50 files in other folders)
