[package]
name = "helm-desktop"
version = "0.1.0"
description = "Helm desktop orchestrator"
authors = ["inxx"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
